5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4496/executions/1712_2503.log
== SUBMITION (2019-05-15 09:31:04) 
-- CODE:
n= 0
c= 0
d= 1
e= 0
while(c<n):
	e=e+(aux*(4/d))
	if(aux==1):
		aux=-1
	else:
		aux = 1
	c=c+1
	d=d+2
print(round(e,8))
-- EXECUTION TIME:
0.121695
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
0
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
0
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 09:31:50) 
-- CODE:
n= int(input())
c= 0
d= 1
e= 0
while(c<n):
	e=e+(aux*(4/d))
	if(aux==1):
		aux=-1
	else:
		aux = 1
	c=c+1
	d=d+2
print(round(e,8))
-- EXECUTION TIME:
0.113055
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2503/main.py", line 6, in <module>
    e=e+(aux*(4/d))
NameError: name 'aux' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 09:32:00) 
-- CODE:
n= int(input())
c= 0
d= 1
e= 0
while(c<n):
	e=e+(aux*(4/d))
	if(aux==1):
		aux=-1
	else:
		aux = 1
	c=c+1
	d=d+2
print(round(e,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    e=e+(aux*(4/d))
NameError: name 'aux' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 09:32:08) 
-- CODE:
n= int(input())
c= 0
d= 1
e= 0
while(c<n):
	e=e+(aux*(4/d))
	if(aux==1):
		aux=-1
	else:
		aux = 1
	c=c+1
	d=d+2
print(round(e,8))
-- EXECUTION TIME:
0.148712
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2503/main.py", line 6, in <module>
    e=e+(aux*(4/d))
NameError: name 'aux' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 09:32:32) 
-- CODE:
n= int(input())
c= 0
d= 1
e= 0
aux=1
while(c<n):
	e=e+(aux*(4/d))
	if(aux==1):
		aux=-1
	else:
		aux = 1
	c=c+1
	d=d+2
print(round(e,8))
-- EXECUTION TIME:
0.209101
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
3.13423981
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
3.09616153
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
3.20818565
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
